--- a/style.css
+++ b/style.css
@@ -6,6 +6,11 @@ body{
   font-family: arial;
 }
 
+img{
+  margin: 0;
+  display: block;
+}
+
 header{
   position: fixed;
   top: 0;
@@ -65,10 +70,12 @@ header a{
 
 
 .profile{
+  display: flex;
+  align-items: flex-end;
+  flex-flow: row;
   width: 60%;
-  height: 40%;
+  height: 100%;
   margin: auto;
-  background-color: #fff;
   position: absolute;
   top: 50%;
   left: 20%;
@@ -76,21 +83,30 @@ header a{
 }
 
 .profile .profile-pic, .profile .profile-info{
-  width: 50%;
   box-sizing: border-box;
   display: inline-block;
+  height: 70%;
+  flex: 1;
+  flex-grow: 1;
 }
 
 .profile .profile-pic{
-  float: left;
+}
+
+.profile .profile-pic img{
+  width: 100%;
+  height: 100%;
 }
 
 .profile .profile-info{
-  float: right;
-  padding: 40px 80px;
   background-color: #fff;
-  height: 200%;
   color: #182153;
+  display: flex;
+  align-items: center;
+}
+
+.profile .profile-info .content-info{
+  padding-left: 70px;
 }
 
 .profile-info h1{
@@ -286,4 +302,8 @@ input[type=text] {
 
 input[type=text]:hover{
   background-color: #DCE6EF;
+}
+
+.contact .right h2{
+  text-align: left;
 }
