--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
+/* FONTS */
 @import url('https://fonts.googleapis.com/css?family=Assistant:300|Roboto|Nunito');
 
+/* BODY TAGS */
 body{
   margin: 0;
   padding: 0;
-  font-family: arial;
+  font-family: arial
 }
 
 img{
