--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* FONTS */
-@import url('https://fonts.googleapis.com/css?family=Assistant:300|Roboto|Lato:300|Nunito');
+@import url('https://fonts.googleapis.com/css?family=Assistant:300|Roboto|Lato:300|Sarabun:500|Nunito');
 
 /* BODY TAGS */
 body{
@@ -13,12 +13,17 @@ img{
   display: block;
 }
 
-h1, h2, h3, h4, li, p{
+h1, h2, h3, h4, li, p, th, td{
   color: #182153;
 }
 
 a{
   text-decoration: none;
+}
+
+ul{
+  list-style: none;
+  padding: 0;
 }
 
 /* HEADER SECTION */
@@ -32,15 +37,9 @@ header{
   z-index: 10;
 }
 
-header h3, header a{
-  display: inline-block;
-  color: #182153;
-}
-
 header h3{
   font-family: 'Assistant', sans-serif;
   font-size: 27px;
-  text-transform: capitalize;
 }
 
 .links{
@@ -81,20 +80,19 @@ header .title{
   margin-top: 13vh;
   overflow: hidden;
   position: relative;
+  display: flex;
+  justify-content: center;
 }
 
 
 .profile{
   display: flex;
+  justify-content: center;
   align-items: flex-end;
-  flex-flow: row;
   width: 60%;
   height: 100%;
   margin: auto;
   position: absolute;
-  top: 50%;
-  left: 20%;
-  transform: translate(0, -50%);
 }
 
 .profile .profile-pic, .profile .profile-info{
@@ -105,9 +103,6 @@ header .title{
   flex-grow: 1;
 }
 
-.profile .profile-pic{
-}
-
 .profile .profile-pic img{
   width: 100%;
   height: 100%;
@@ -115,7 +110,6 @@ header .title{
 
 .profile .profile-info{
   background-color: #fff;
-  color: #182153;
   display: flex;
   align-items: center;
 }
@@ -138,10 +132,8 @@ header .title{
 }
 
 .profile ul{
-  list-style: none;
   font-family: 'Nunito', sans-serif;
   font-size: 15px;
-  padding: 0;
 }
 
 .profile li{
@@ -164,7 +156,6 @@ header .title{
 }
 
 .social-bar ul{
-  list-style: none;
   display: flex;
   justify-content: center;
   margin: 0;
@@ -197,11 +188,6 @@ header .title{
   background-color: white;
   text-align: center;
   font-family: 'Nunito', sans-serif;
-}
-
-.skills h2{
-  margin: 20px 0;
-  text-transform: uppercase;
 }
 
 .line_skills{
@@ -267,10 +253,11 @@ progress[value]::-webkit-progress-value {
   flex-direction: row;
 }
 
-.contact h2{
+.title-section{
   text-align: center;
   text-transform: uppercase;
-  font-family: 'Nunito', sans-serif;
+  font-weight: 500;
+  font-family: 'Sarabun', sans-serif;
 }
 
 .contact h3{
@@ -283,9 +270,7 @@ progress[value]::-webkit-progress-value {
   display: block;
   margin: 0;
   width: 100%;
-  border-style: solid;
-  border-width: 0.8px;
-  border-color: white;
+  border: solid 0.8px white;
 }
 
 .contact .left, .contact .right{
@@ -345,19 +330,17 @@ input[type=text]:hover{
 }
 
 .contact .right ul{
-  padding: 0;
   font-family: 'Nunito', sans-serif;
   font-size: 13px;
   margin: 20px 0 60px 0;
 }
 
 .contact .right li{
-  list-style: none;
   margin-top: 1em;
 }
 
 .contact .right hr{
-  border: 0.1px inset #000;
+  border: 0.6px inset #000;
   margin: 0;
   width: 60%;
 }
@@ -367,11 +350,9 @@ input[type=text]:hover{
 
 .contact .right .social-bar-alt ul{
   margin: 20 0 0 5px;
-  padding: 0;
 }
 
 .contact .right .social-bar-alt li{
-  list-style: none;
   display: inline-block;
   font-size: 17px;
   margin-right: 1.5em;
