--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /* FONTS */
-@import url('https://fonts.googleapis.com/css?family=Assistant:300|Roboto|Lato:300|Sarabun:500|Nunito');
+@import url('https://fonts.googleapis.com/css?family=Assistant:300|Roboto|Lato:300|Hind|Sarabun:500|Nunito');
 
 /* BODY TAGS */
 body{
@@ -66,6 +66,7 @@ header .title{
   display: flex;
   width: 100%;
   justify-content: flex-start;
+  align-items: center;
   padding-left: 30px;
   box-sizing: border-box;
 }
@@ -330,8 +331,8 @@ input[type=text]:hover{
 }
 
 .contact .right ul{
-  font-family: 'Nunito', sans-serif;
-  font-size: 13px;
+  font-family: 'Hind', sans-serif;
+  font-size: 14px;
   margin: 20px 0 60px 0;
 }
 
@@ -361,4 +362,36 @@ input[type=text]:hover{
 
 .contact .right .social-bar-alt i{
   color: #000;
+}
+
+/* RESPONSIVE  */
+@media screen and (max-width: 685px) {
+  /* CONTACT SECTION */
+  .row-2{
+    flex-direction: column;
+    justify-content: center;
+  }
+
+  .contact .left, .contact .right{
+    padding: 20px;
+    text-align: center;
+  }
+
+  .contact .left form{
+    text-align: center;
+  }
+
+
+  .contact .right ul{
+    margin: 10px 0 30px 0;
+    font-size: 16px;
+  }
+
+  .contact .right hr{
+    width: 100%;
+  }
+
+  .contact .left input[type=text], .contact .left button{
+    width: 100%;
+  }
 }
