--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
 @import url('https://fonts.googleapis.com/css?family=Assistant:300|Roboto|Lato:300|Hind|Sarabun:500|Nunito');
 
 /* BODY TAGS */
+html {
+  scroll-behavior: smooth;
+}
+
 body{
   margin: 0;
   padding: 0;
@@ -37,15 +41,44 @@ header{
   z-index: 10;
 }
 
+header .bars{
+  display: none;
+}
+
 header h3{
   font-family: 'Assistant', sans-serif;
   font-size: 27px;
+  margin: 0;
 }
 
-.links{
+header .links{
   width: 100%;
   display: flex;
   justify-content: flex-end;
+}
+
+header #links-mob{
+  display: none;
+  position: absolute;
+  top: 13vh;
+  left: 0;
+  width: 100%;
+  height: 0;
+  transition-property: height;
+  transition-duration: 1s;
+  background: #fff;
+  align-items: flex-start;
+  justify-content: center;
+  text-align: center;
+}
+
+header #links-mob li{
+  font-size: 22px;
+  padding: 0.3em 0;
+}
+
+header #links-mob a{
+  padding: 0;
 }
 
 header a{
@@ -65,6 +98,7 @@ header nav{
 header .title{
   display: flex;
   width: 100%;
+  height: 13vh;
   justify-content: flex-start;
   align-items: center;
   padding-left: 30px;
@@ -90,6 +124,7 @@ header .title{
   display: flex;
   justify-content: center;
   align-items: flex-end;
+  box-sizing: border-box;
   width: 60%;
   height: 100%;
   margin: auto;
@@ -366,6 +401,74 @@ input[type=text]:hover{
 
 /* RESPONSIVE  */
 @media screen and (max-width: 685px) {
+  /* HEADER SECTION */
+  header{
+    position: absolute;
+  }
+
+  header .links{
+     display: none;
+   }
+
+   header .title{
+     justify-content: flex-end;
+   }
+
+   header .bars{
+     display: flex;
+     height: 13vh;
+     align-items: center;
+     justify-content: flex-end;
+   }
+
+   header .bars i{
+     display: flex;
+     padding: 0 0.7em 0 1.2em;
+     font-size: 28px;
+   }
+
+   header .bars i:hover{
+     cursor: pointer;
+   }
+
+   /* PROFILE SECTION */
+   .background-pic{
+     height: 120vh;
+   }
+
+   .profile{
+     flex-direction: column;
+     height: 120vh;
+     width: 80%;
+     padding: 10% 0;
+   }
+
+   .profile .profile-pic, .profile .profile-info{
+     display: flex;
+     box-sizing: border-box;
+     width: 100%;
+   }
+
+   .profile .profile-pic{
+     height: 100%;
+     align-items: flex-end;
+   }
+
+   .profile .profile-pic img{
+     width: 100%;
+     height: 100%;
+   }
+
+   .profile .profile-info{
+     background-color: #fff;
+     display: flex;
+     align-items: center;
+   }
+
+   .profile .content-info{
+     padding-left: 45px !important;
+   }
+
   /* CONTACT SECTION */
   .row-2{
     flex-direction: column;
