--- a/style.css
+++ b/style.css
@@ -74,6 +74,13 @@ header .links-mob{
   align-items: flex-start;
   justify-content: center;
   text-align: center;
+  transition-property: height;
+  transition-duration: 1s;
+  transition-timing-function: ease;
+}
+
+.transitionAux{
+  height: 30vh !important;
 }
 
 header .links-mob ul{
@@ -427,159 +434,4 @@ input[type=text]:hover{
   .profile, .social-bar{
     width: 80%;
   }
-}
-@media screen and (max-width: 685px) {
-  /* HEADER SECTION */
-  header{
-    position: absolute;
-  }
-
-  header .links{
-     display: none;
-   }
-
-   header .title{
-     font-size: 32px;
-     padding-left: 1em;
-     justify-content: flex-start;
-   }
-
-   header .title h3{
-     font-size: 32px;
-   }
-
-   header .menu-mobile{
-     display: flex;
-     height: 13vh;
-     align-items: center;
-     justify-content: flex-end;
-   }
-
-   header .menu-mobile i{
-     margin: 0 1em;
-     display: flex;
-     font-size: 28px;
-     color: #182153;
-   }
-
-   header .menu-mobile .bg-bar{
-     width: 60%;
-     height: 60%;
-     display: flex;
-     align-items: center;
-     justify-content: center;
-     background: white;
-     border-radius: 50%;
-     margin-right: 1em;
-   }
-
-   header .menu-mobile .bg-bar:hover{
-     cursor: pointer;
-   }
-
-   /* PROFILE SECTION */
-   .background-pic{
-     height: 120vh;
-   }
-
-   .profile{
-     flex-direction: column;
-     height: 120vh;
-     width: 80%;
-     padding: 10% 0;
-   }
-
-   .profile .profile-pic, .profile .profile-info{
-     display: flex;
-     box-sizing: border-box;
-     width: 100%;
-   }
-
-   .profile .profile-pic{
-     height: 100%;
-     align-items: flex-end;
-   }
-
-   .profile .profile-pic img{
-     width: 100%;
-     height: 100%;
-   }
-
-   .profile .profile-info{
-     background-color: #fff;
-     display: flex;
-     align-items: center;
-   }
-
-   .profile .content-info{
-     padding-left: 45px !important;
-   }
-
-   /* SOCIAL BAR SECTION */
-   .social-bar{
-     display: none;
-     width: 100%;
-   }
-
-   .social-bar-mobile{
-     display: flex;
-   }
-
-
-  /* CONTACT SECTION */
-  .row-2{
-    flex-direction: column;
-    justify-content: center;
-  }
-
-  .contact .left, .contact .right{
-    padding: 20px;
-    text-align: center;
-  }
-
-  .contact .left form{
-    text-align: center;
-  }
-
-  .contact .right h3{
-    font-size: 30px;
-    margin-top: 1em;
-  }
-
-  .contact .right h4{
-    font-size: 23px;
-  }
-
-  .contact .right ul{
-    margin: 2em 0;
-    font-size: 18px;
-  }
-
-  .contact .right hr{
-    width: 100%;
-  }
-
-  .contact .left input[type=text], .contact .left button{
-    width: 100%;
-  }
-
-  /* PRESENTATION SECTION */
-  .text-present{
-    text-align: center;
-    padding: 15% 10%;
-    font-family: 'Nunito', sans-serif;
-  }
-
-  .text-present p{
-    font-size: 17px;
-  }
-
-  /* SKILLS SECTION */
-  table{
-    width: 90%;
-    margin: auto;
-    margin-top: 40px;
-    margin-bottom: 40px;
-  }
-
 }
