--- a/responsive.css
+++ b/responsive.css
@@ -37,14 +37,23 @@ header .links{
    display: flex;
    align-items: center;
    justify-content: center;
-   background: white;
    border-radius: 50%;
    margin-right: 1em;
+   transition: background-color .6s ease;
+
  }
 
  header .menu-mobile .bg-bar:hover{
    cursor: pointer;
  }
+
+.bar-inactive{
+  background-color: white;
+}
+
+.bar-active{
+  background-color: #182153;
+}
 
  /* PROFILE SECTION */
  .background-pic{
