Created templates and using gulp

--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,5 @@
-/* FONTS */
-@import url('https://fonts.googleapis.com/css?family=Assistant:300|Roboto|Lato:300|Hind|Sarabun:500|Nunito');
+/* VARIABLES */
+
 
 /* BODY TAGS */
 html {
