--- a/src/templates/head-styles.html
+++ b/src/templates/head-styles.html
@@ -1,3 +1,3 @@
 <!-- Template: Head Styles -->
-<link rel="stylesheet" href="style.css">
+<link rel="stylesheet" href="css/style.css">
 <link rel="stylesheet" href="responsive.css" media="(max-width: 685px)">
