--- a/src/style.scss
+++ b/src/style.scss
@@ -37,7 +37,7 @@ header{
   left: 0;
   width: 100%;
   height: 13vh;
-  background: #fff;
+  background: $bg-color-1;
   z-index: 10;
 
   .menu-mobile{
@@ -138,7 +138,7 @@ header{
   }
 
   .profile-info{
-    background-color: #fff;
+    background-color: $bg-color-1;
     display: flex;
     align-items: center;
 
@@ -178,7 +178,7 @@ header{
       a{
         padding: 5px 15px;
         font-size: 22px;
-        color: #fff;
+        color: $bg-color-1;
       }
     }
   }
@@ -191,7 +191,7 @@ header{
 
 /* PRESENTATION SECTION */
 .presentation{
-  background-color: #F1F1F1;
+  background-color: $bg-color-2;
 }
 
 .text-present{
@@ -203,7 +203,7 @@ header{
 /* SKILLS SECTION */
 .skills{
   width: 100%;
-  background-color: white;
+  background-color: $bg-color-1;
   text-align: center;
   font-family: 'Nunito', sans-serif;
 }
@@ -244,7 +244,7 @@ table{
     }
 
     progress[value]::-webkit-progress-bar{
-      background-color: #fff;
+      background-color: $bg-color-1;
       border-radius: 8px;
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
     }
@@ -263,7 +263,7 @@ table{
   flex-direction: column;
   justify-content: center;
   width: 100%;
-  background-color: #F1F1F1;
+  background-color: $bg-color-2;
 
   .title-section{
     text-align: center;
@@ -276,7 +276,7 @@ table{
     display: block;
     margin: 0;
     width: 100%;
-    border: solid 0.8px white;
+    border: solid 0.8px $bg-color-1;
   }
 
   .row-2{
@@ -284,7 +284,7 @@ table{
     flex-direction: row;
 
     .left, .right{
-      background-color: #F1F1F1;
+      background-color: $bg-color-2;
       flex: 1;
       flex-grow: 1;
     }
@@ -292,7 +292,7 @@ table{
     .left{
       padding: 50px;
       box-sizing: border-box;
-      border-right: solid 0.8px white;
+      border-right: solid 0.8px $bg-color-1;
 
       form{
         text-align: right;
@@ -302,9 +302,13 @@ table{
           padding: 15px 30px;
           border: none;
           background-color: $primary-color;
-          color: #FFF;
+          color: $bg-color-1;
           box-sizing: border-box;
           font-family: 'Nunito', sans-serif;
+
+          &:hover{
+            cursor: pointer;
+          }
         }
 
         input[type=text] {
