feature/gulp-tasks - Create some templates

--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -13,26 +13,26 @@
         <section class="links-mob menu-hidden" id="links-mob">
           <ul>
             <li>
-              <a href="#bg">Home</a>
+              <a href="index.html/#bg">Home</a>
             </li>
             <li>
-              <a href="">Portfolio</a>
+              <a href="portfolio.html">Portfolio</a>
             </li>
             <li>
-              <a href="#skillsSection">Skills</a>
+              <a href="index.html/#skillsSection">Skills</a>
             </li>
             <li>
-              <a href="#contactSection">Contact</a>
+              <a href="index.html/contactSection">Contact</a>
             </li>
           </ul>
         </section>
       </div>
       <!-- LINKS FOR PC -->
       <div class="links">
-        <a href="#bg">Home</a>
-        <a href="">Portfolio</a>
-        <a href="#skillsSection">Skills</a>
-        <a href="#contactSection">Contact</a>
+        <a href="index.html#bg">Home</a>
+        <a href="portfolio.html">Portfolio</a>
+        <a href="index.html#skillsSection">Skills</a>
+        <a href="index.html#contactSection">Contact</a>
       </div>
     </nav>
   </header>
