--- a/src/style.scss
+++ b/src/style.scss
@@ -1,4 +1,5 @@
 @import 'variables';
+@import 'mixins';
 
 /* BODY TAGS */
 html {
@@ -8,7 +9,7 @@ html {
 body{
   margin: 0;
   padding: 0;
-  font-family: arial
+  font-family: arial;
 }
 
 img{
@@ -30,7 +31,6 @@ ul{
 }
 
 /* HEADER SECTION */
-
 header{
   position: fixed;
   top: 0;
@@ -45,8 +45,7 @@ header{
   }
 
   h3{
-    font-family: 'Assistant', sans-serif;
-    font-size: 27px;
+    @include font-type(('Assistant', sans-serif), (27px));
     margin: 0;
   }
 
@@ -54,15 +53,20 @@ header{
     width: 100%;
     display: flex;
     justify-content: flex-end;
-  }
+    padding-right: 5%;
 
-  a{
-    display: inline-block;
-    font-family: 'Nunito', sans-serif;
-    font-size: 16px;
-    text-transform: uppercase;
-    box-sizing: border-box;
-    padding: 0 30px;
+    a{
+      display: inline-block;
+      @include font-type($principal-font, 16px);
+      text-transform: uppercase;
+      box-sizing: border-box;
+      padding: 20px 30px;
+      border-radius: 5%;
+
+      &:hover{
+        background-color: $bg-color-2;
+      }
+    }
   }
 
   nav{
@@ -71,11 +75,7 @@ header{
   }
 
   .title{
-    display: flex;
-    width: 100%;
-    height: 13vh;
-    justify-content: flex-start;
-    align-items: center;
+    @include size(flex, 100%, 13vh, flex-start, center);
     padding-left: 30px;
     box-sizing: border-box;
   }
@@ -84,32 +84,24 @@ header{
 /* PROFILE SECTION */
 
 .background-pic{
+  @include size(flex, 100%, 90vh, center, stretch);
   background-image: url(../computer.jpg);
   background-repeat: no-repeat;
   background-size: cover;
-  width: 100%;
-  height: 90vh;
   margin-top: 13vh;
   overflow: hidden;
   position: relative;
-  display: flex;
-  justify-content: center;
 }
 
 
 .profile{
-  display: flex;
-  justify-content: center;
-  align-items: flex-end;
+  @include size(flex, 60%, 100%, center, flex-end); 
   box-sizing: border-box;
-  width: 60%;
-  height: 100%;
   margin: auto;
   position: absolute;
 
   ul{
-    font-family: 'Nunito', sans-serif;
-    font-size: 15px;
+    @include font-type($principal-font, 15px);
   }
 
   li{
@@ -147,14 +139,12 @@ header{
     }
 
     h1{
-      font-family: 'Assistant', sans-serif;
-      font-size: 29px;
+      @include font-type(('Assistant', sans-serif), 29px);
       margin-bottom: 5px;
     }
 
     h4{
-      font-family: 'Roboto', sans-serif;
-      font-size: 14px;
+      @include font-type(('Roboto', sans-serif), 14px);
       text-transform: uppercase;
       margin-top: 0;
     }
@@ -163,11 +153,7 @@ header{
 
 /* SOCIAL BAR SECTION */
 .social-bar{
-  display: flex;
-  width: 60%;
-  height: 8vh;
-  align-items: center;
-  justify-content: center;
+  @include size(flex, 60%, 8vh, center, center); 
   margin: auto;
   background-color: $primary-color;
 
@@ -197,7 +183,7 @@ header{
 .text-present{
   text-align: center;
   padding: 100px 32%;
-  font-family: 'Nunito', sans-serif;
+  font-family: $principal-font;
 }
 
 /* SKILLS SECTION */
@@ -205,7 +191,7 @@ header{
   width: 100%;
   background-color: $bg-color-1;
   text-align: center;
-  font-family: 'Nunito', sans-serif;
+  font-family: $principal-font;
 }
 
 .line_skills{
@@ -217,9 +203,7 @@ header{
 
 table{
   width: 60%;
-  margin: auto;
-  margin-top: 40px;
-  margin-bottom: 40px;
+  margin: 40px auto;
   
   th, td{
     padding: 17px;
@@ -251,7 +235,6 @@ table{
     
     progress[value]::-webkit-progress-value {
       background-color: $primary-color;
-      -webkit-appearance: none;
       border-radius: 8px;
     }
   }
@@ -259,10 +242,8 @@ table{
 
 /* CONTACT SECTION */
 .contact{
-  display: flex;
+  @include size(flex, 100%, auto, center, stretch); 
   flex-direction: column;
-  justify-content: center;
-  width: 100%;
   background-color: $bg-color-2;
 
   .title-section{
@@ -304,7 +285,7 @@ table{
           background-color: $primary-color;
           color: $bg-color-1;
           box-sizing: border-box;
-          font-family: 'Nunito', sans-serif;
+          font-family: $principal-font;
 
           &:hover{
             cursor: pointer;
@@ -317,7 +298,7 @@ table{
           margin: 8px 0;
           box-sizing: border-box;
           border: none;
-          font-family: 'Nunito', sans-serif;
+          font-family: $principal-font;
 
           &:hover{
             background-color: #DCE6EF;
@@ -331,8 +312,7 @@ table{
       box-sizing: border-box;
 
       h3{
-        font-family: 'Assistant', sans-serif;
-        font-size: 23px;
+        @include font-type(('Assistant', sans-serif), 23px);
         margin: 0 0 5px 0;
         font-weight: 300;
       }
@@ -345,8 +325,7 @@ table{
       }
 
       ul{
-        font-family: 'Hind', sans-serif;
-        font-size: 14px;
+        @include font-type(('Hind', sans-serif), 14px);
         margin: 20px 0 60px 0;
 
         li{
