Created new template and added to others

--- a/src/templates/footer.html
+++ b/src/templates/footer.html
@@ -21,20 +21,7 @@
           </ul>
           <hr>
           <div class="social-bar-alt">
-            <ul>
-              <li>
-                <a href=""><i class="fab fa-linkedin-in"></i></a>
-              </li>
-              <li>
-                <a href=""><i class="fab fa-facebook-f"></i></a>
-              </li>
-              <li>
-                <a href=""><i class="fab fa-github-alt"></i></a>
-              </li>
-              <li>
-                <a href=""><i class="fab fa-instagram"></i></a>
-              </li>
-            </ul>
+            <include src="social-networks.html"></include>
           </div>
       </div>
     </aside>
