--- a/src/templates/header.html
+++ b/src/templates/header.html
@@ -16,7 +16,7 @@
               <a href="index.html/#bg">Home</a>
             </li>
             <li>
-              <a href="portfolio.html">Portfolio</a>
+              <a href="repos.html">GitHub Repos</a>
             </li>
             <li>
               <a href="index.html/#skillsSection">Skills</a>
@@ -30,7 +30,7 @@
       <!-- LINKS FOR PC -->
       <div class="links">
         <a href="index.html#bg">Home</a>
-        <a href="portfolio.html">Portfolio</a>
+        <a href="repos.html">GitHub Repos</a>
         <a href="index.html#skillsSection">Skills</a>
         <a href="index.html#contactSection">Contact</a>
       </div>
