--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -220,11 +220,17 @@ table{
 
   .cell-progress{
     width: 30%;
+
+    ::-webkit-progress-value {
+      width: 10%;
+      transition: width 1s;
+    }
     
-    progress{
-      width: 100%;
+    .progress-bar__bar{
+      width: 0;
       height: 25px;
       -webkit-appearance: none;
+      transition: width 3s ease; 
     }
 
     progress[value]::-webkit-progress-bar{
@@ -232,7 +238,7 @@ table{
       border-radius: 8px;
       box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25) inset;
     }
-    
+
     progress[value]::-webkit-progress-value {
       background-color: $primary-color;
       border-radius: 8px;
