--- a/src/scss/responsive.scss
+++ b/src/scss/responsive.scss
@@ -1,6 +1,42 @@
 @import 'variables';
+@import 'mixins';
+
 
 /* HEADER SECTION */
+.header-repos{
+  
+  .menu-mobile{
+    
+    .links-mob{
+      background: #181739f0;
+      transition: height .5s ease;
+
+      ul{
+        width: 70%;
+        height: 100%;
+        margin: auto;
+
+        li{
+          width: 100%;
+          font-size: 20px;
+          margin: 0.3em 0;
+          padding: 0.3em 0;
+          border-radius: 5px;
+          box-sizing: border-box;
+
+          &:hover{
+            background-color: $primary-color;
+          }
+
+            a{
+              padding: 0;
+            }
+        }
+      }
+    }
+  }  
+}
+
 header{
   position: absolute;
 
@@ -103,27 +139,19 @@ header{
     flex-direction: column;
     height: 120vh;
     width: 80%;
-    padding: 10% 0;
+    padding: 5% 0;
 
     .profile-pic, .profile-info{
       display: flex;
-      box-sizing: border-box;
-      width: 100%;
-    }
-
-    .profile-pic{
-      height: 100%;
-      align-items: flex-end;
-
-      img{
-        width: 100%;
-        height: 100%;
-      }
+      width: 400px;
+      min-width: 250px;
+      max-width: 400px;
+      min-height: 250px;
+      max-height: 400px;
     }
 
     .profile-info{
       background-color: #fff;
-      display: flex;
       align-items: center;
 
       .content-info{
@@ -134,13 +162,28 @@ header{
 }
 
 /* SOCIAL BAR SECTION */
-.social-bar{
-  display: none;
-  width: 100%;
- }
 
 .social-bar-mobile{
-  display: flex;
+  @include size(flex, 400px, 8vh, center, center); 
+  min-width: 250px;
+  margin: auto;
+  background-color: $primary-color;
+
+  ul{
+    display: flex;
+    li{
+      margin: 20px 10px;
+      a{
+        padding: 5px 15px;
+        font-size: 22px;
+        color: $bg-color-1;
+      }
+    }
+  }
+}
+
+.social-bar{
+  display: none;
 }
 
 /* PRESENTATION SECTION */
@@ -183,7 +226,7 @@ table{
       }
 
       input, button{
-        width: 100%;
+        width: 80% !important;
       }
     }
 
@@ -207,5 +250,12 @@ table{
         width: 100%;
       }
     }
+  }
+}
+
+.content{
+  .repos{
+    grid-template-columns: 1fr;
+    grid-row-gap: 2em;
   }
 }
